[gd_scene load_steps=3 format=2]

[ext_resource path="res://Overworld/Objects/Matching Puzzle.gd" type="Script" id=1]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.9802, 20.0837 )

[node name="Matching Puzzle" type="Node2D"]
script = ExtResource( 1 )

[node name="Left" type="Node2D" parent="."]

[node name="Tile1" type="ColorRect" parent="Left"]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0.14902, 0.752941, 0.0980392, 1 )

[node name="1" type="Area2D" parent="Left/Tile1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left/Tile1/1"]
position = Vector2( 19.9998, 19.9998 )
shape = SubResource( 1 )

[node name="Tile2" type="ColorRect" parent="Left"]
margin_left = 40.1707
margin_top = 0.224403
margin_right = 80.1707
margin_bottom = 40.2244
color = Color( 0.0313726, 0.0627451, 0.419608, 1 )

[node name="2" type="Area2D" parent="Left/Tile2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left/Tile2/2"]
position = Vector2( 19.9998, 19.9998 )
shape = SubResource( 1 )

[node name="Tile3" type="ColorRect" parent="Left"]
margin_left = 79.8375
margin_top = -0.330379
margin_right = 119.838
margin_bottom = 39.6696
color = Color( 0.701961, 0.133333, 0.34902, 1 )

[node name="3" type="Area2D" parent="Left/Tile3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left/Tile3/3"]
position = Vector2( 19.9998, 19.9998 )
shape = SubResource( 1 )

[node name="Tile4" type="ColorRect" parent="Left"]
margin_left = -0.0713501
margin_top = 39.8441
margin_right = 39.9286
margin_bottom = 79.8441
color = Color( 0.905882, 0.537255, 0.105882, 1 )

[node name="4" type="Area2D" parent="Left/Tile4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left/Tile4/4"]
position = Vector2( 19.9998, 19.9998 )
shape = SubResource( 1 )

[node name="Tile5" type="ColorRect" parent="Left"]
margin_left = 39.6906
margin_top = 39.6402
margin_right = 79.6906
margin_bottom = 79.6402
color = Color( 0.396078, 0.0980392, 0.752941, 1 )

[node name="5" type="Area2D" parent="Left/Tile5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left/Tile5/5"]
position = Vector2( 19.9998, 19.9998 )
shape = SubResource( 1 )

[node name="Tile6" type="ColorRect" parent="Left"]
margin_left = 80.0643
margin_top = 40.048
margin_right = 120.064
margin_bottom = 80.048
color = Color( 0.733333, 0.752941, 0.0980392, 1 )

[node name="6" type="Area2D" parent="Left/Tile6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left/Tile6/6"]
position = Vector2( 19.9998, 19.9998 )
shape = SubResource( 1 )

[node name="Right" type="Node2D" parent="."]
position = Vector2( 572.224, 0.949997 )

[node name="Tile7" type="ColorRect" parent="Right"]
margin_left = -0.335022
margin_top = 0.395393
margin_right = 39.665
margin_bottom = 40.3954
color = Color( 0.733333, 0.752941, 0.0980392, 1 )

[node name="7" type="Area2D" parent="Right/Tile7"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right/Tile7/7"]
position = Vector2( 19.9998, 19.9998 )
shape = SubResource( 1 )

[node name="Tile8" type="ColorRect" parent="Right"]
margin_left = 40.3357
margin_top = 0.157299
margin_right = 80.3357
margin_bottom = 40.1573
color = Color( 0.701961, 0.133333, 0.34902, 1 )

[node name="8" type="Area2D" parent="Right/Tile8"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right/Tile8/8"]
position = Vector2( 19.9998, 19.9998 )
shape = SubResource( 1 )

[node name="Tile9" type="ColorRect" parent="Right"]
margin_left = 79.6724
margin_top = -0.263275
margin_right = 119.672
margin_bottom = 39.7367
color = Color( 0.0313726, 0.0627451, 0.419608, 1 )

[node name="9" type="Area2D" parent="Right/Tile9"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right/Tile9/9"]
position = Vector2( 19.9998, 19.9998 )
shape = SubResource( 1 )

[node name="Tile10" type="ColorRect" parent="Right"]
margin_left = -0.298889
margin_top = 40.1278
margin_right = 39.7011
margin_bottom = 80.1278
color = Color( 0.396078, 0.0980392, 0.752941, 1 )

[node name="10" type="Area2D" parent="Right/Tile10"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right/Tile10/10"]
position = Vector2( 19.9998, 19.9998 )
shape = SubResource( 1 )

[node name="Tile11" type="ColorRect" parent="Right"]
margin_left = 39.9182
margin_top = 39.8441
margin_right = 79.9182
margin_bottom = 79.8441
color = Color( 0.905882, 0.537255, 0.105882, 1 )

[node name="11" type="Area2D" parent="Right/Tile11"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right/Tile11/11"]
position = Vector2( 19.9998, 19.9998 )
shape = SubResource( 1 )

[node name="Tile12" type="ColorRect" parent="Right"]
margin_left = 80.2311
margin_top = 40.1155
margin_right = 120.231
margin_bottom = 80.1155
color = Color( 0.14902, 0.752941, 0.0980392, 1 )

[node name="12" type="Area2D" parent="Right/Tile12"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right/Tile12/12"]
position = Vector2( 19.9998, 19.9998 )
shape = SubResource( 1 )

